--- a/Efectos/stylex.css
+++ b/Efectos/stylex.css
@@ -159,3 +159,48 @@ body
     bottom: -80px;
     letter-spacing: 0.15em;
 }
+
+
+
+footer
+{
+    position: absolute;
+ top: 820px;
+    width: 100%;
+    background: #3586ff;
+    min-height: 100px;
+    display: flex;
+    padding: 20px 50px;
+    justify-content: center;
+    align-items: center;
+
+}
+
+footer .social_icon
+{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+    flex-wrap: wrap;
+}
+
+footer .social_icon li
+{
+    list-style: none;
+}
+footer .social_icon li a
+
+{
+    font-size: 2em;
+    color: #fff;
+    margin: 0 10px;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+footer .social_icon li a:hover
+{
+    transform: translateY(-10px);
+}
